--- a/Practices/Practice3/Practice3.ipynb
+++ b/Practices/Practice3/Practice3.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "## **Основные понятия с лекции**\n",
     "\n",
-    "## **Вложенные списки**\n",
+    "### Вложенные списки\n",
     "\n",
     "Элементами списков могут быть другие списки, такие списки называются *вложенными*. Например, вот так будет выглядеть таблица умножения от 4 до 4:"
    ]
@@ -46,6 +46,7 @@
     }
    ],
    "source": [
+    "# TODO: вложенных списков не было в Lecture3.ipynb\n",
     "table = [[1, 2, 3, 4],\n",
     "         [2, 4, 6, 8],\n",
     "         [3, 6, 9, 12],\n",
@@ -58,22 +59,23 @@
    "id": "b64e1fa6-8d6e-4637-8f1f-8d66fe203c00",
    "metadata": {},
    "source": [
-    "## **Функции**\n",
+    "### Функции\n",
     "\n",
     "Функции можно описать следующей схемой:\n",
     "![](pictures/1.jpg)\n",
     "\n",
     "Примеры функций:\n",
-    "- `type()` &ndash; возвращает тип переменной\n",
-    "- `str()` &ndash; конвертирует переменную в строку\n",
-    "- `int()` &ndash; конвертирует переменную в `integer`\n",
+    "- `print()` — выводит символы на экран\n",
+    "- `type()` — возвращает тип переменной\n",
+    "- `str()` — конвертирует переменную в строку\n",
+    "- `int()` — конвертирует переменную в `integer`\n",
     "\n",
     "Примеры использования:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "id": "0e8faf3d-c37f-483f-8461-01b188d3579e",
    "metadata": {},
    "outputs": [
@@ -104,17 +106,17 @@
    "source": [
     "### Функции для списков и строк\n",
     "\n",
-    "- `sorted`: возвращает уже отсортированный список\n",
-    "- `len`: возвращает длину списка\n",
+    "- `sorted`: возвращает отсортированный список\n",
+    "- `len`: возвращает длину списка или строки\n",
     "- `max`: возвращает максимальный элемент списка\n",
     "- `min`: возвращает минимальный элемент списка \n",
     "\n",
-    "С помощью `len` мы можем спокойно проходиться по индексам списка:"
+    "С помощью `len` мы можем проходиться по индексам списка:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "4fc29c20-e149-4cf9-ad99-8181e05bebd0",
    "metadata": {},
    "outputs": [
@@ -155,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "46c84f50-6c15-43e8-b93a-a08c95a42a54",
    "metadata": {},
    "outputs": [
@@ -171,7 +173,8 @@
    "source": [
     "l = [3, 6.4, 10, 1, -20, 30/4, 1/3]\n",
     "\n",
-    "l_sorted = sorted(l, reverse=False) # False является значением аргумента по умолчанию (дефолтным)\n",
+    "# False является значением аргумента по умолчанию (дефолтным)\n",
+    "l_sorted = sorted(l, reverse=False)\n",
     "l_sorted_reverse = sorted(l, reverse=True)\n",
     "\n",
     "print('Отсортированный список:', l_sorted)\n",
@@ -185,13 +188,13 @@
    "source": [
     "### Написание функций своими руками\n",
     "\n",
-    "Синтаксис:\n",
+    "Синтаксис *определения* функции:\n",
     "\n",
-    "``` python\n",
+    "``` Python\n",
     "def название(аргумент1, аргумент2):\n",
-    "    *код внутри функции*\n",
-    "    *код внутри функции*\n",
-    "    *код внутри функции*\n",
+    "\n",
+    "    *код внутри функции (тело функции)*\n",
+    "\n",
     "    return возвращаемое_значение\n",
     "```\n",
     "\n",
@@ -225,10 +228,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a68f5bd5",
+   "id": "945fafb6",
    "metadata": {},
    "source": [
-    "> ✨ ☝️ Переменные, которые вы объявлете в функции недоступны вне этой функции. Они называются *локальным*, а переменные объявленные вне функции называются *глобальными*. Постарайтесь не использовать *глобальные* переменные внутри функции: если вам нужно использовать внешнюю переменную, передайте ее как аргумент функции."
+    "> ✨ ☝️ Переменные, которые вы объявлете в функции, недоступны вне этой функции. Они называются *локальным*. Переменные, объявленные вне функции, называются *глобальными*. Постарайтесь не использовать *глобальные* переменные внутри функции: если вам нужно использовать внешнюю переменную, передайте ее как аргумент функции. За состоянием глобальных переменных бывает сложно следить и, как правило, их использование внутри функций приводит к ошибкам."
    ]
   },
   {
@@ -238,7 +241,7 @@
    "source": [
     "### Объекты и методы\n",
     "\n",
-    "У некоторых типов данных в `python` есть вшитые в них функции. Они называют методами и доступны через точку. Посмотрим на методы строк:"
+    "У некоторых типов данных в `Python` есть вшитые в них полезные функции. Они называются методами и доступны через точку. Посмотрим на методы строк:"
    ]
   },
   {
@@ -272,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "9ac5a697-ac36-44aa-a05a-f878de57d95e",
    "metadata": {},
    "outputs": [
@@ -286,9 +289,11 @@
     }
    ],
    "source": [
-    "# сделаем строку с огромным количеством английских символов c и спрячем туда одну кириллическую с\n",
+    "# сделаем строку с огромным количеством английских символов `c` и спрячем\n",
+    "# туда одну кириллическую `с`\n",
     "ccc = 'c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c с c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c c'\n",
-    "index = ccc.find('с') # теперь ищем кириллическую с, получаем ее индекс в строке\n",
+    "# теперь ищем кириллическую с, получаем ее индекс в строке\n",
+    "index = ccc.find('с')\n",
     "print(index)\n",
     "print(ccc[index])"
    ]
@@ -299,11 +304,11 @@
    "metadata": {},
    "source": [
     "> ☝ Вместо метода `.find()`, иногда можно использовать ключевое слова `in`. Например, можно сделать следующее:\n",
-    "> ```python\n",
+    "> ```Python\n",
     "> 'Hello' in 'Hello world!' \n",
     "> > True \n",
     "> ```\n",
-    "> Но не получится найти индекс, только проверить вхождение подстроки в подстроку!"
+    "> Так не получится найти индекс. Этот способ позволяет проверить, содержится ли заданная подстрока в нашей строке."
    ]
   },
   {
@@ -311,12 +316,12 @@
    "id": "402a1a5c-9194-4b21-80ef-db0b95eb8903",
    "metadata": {},
    "source": [
-    "`.split()` позволяет разделять строки задав разделитель как аргумент. Возвращает этот метод список строк. Например:"
+    "`.split()` позволяет разделять строки, задав разделитель как аргумент. Возвращает этот метод список строк. Например:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "52427556-4e1d-46cb-bd91-cf508a04e4bd",
    "metadata": {},
    "outputs": [
@@ -349,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "ede4862f-a357-4c27-bce3-17173e78d329",
    "metadata": {},
    "outputs": [
@@ -360,7 +365,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m10\u001b[39m):\n\u001b[0;32m----> 3\u001b[0m     a \u001b[38;5;241m=\u001b[39m a\u001b[38;5;241m.\u001b[39mappend(i)\n",
+      "Cell \u001b[0;32mIn[9], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m10\u001b[39m):\n\u001b[0;32m----> 3\u001b[0m     a \u001b[38;5;241m=\u001b[39m \u001b[43ma\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m(i)\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'append'"
      ]
     }
@@ -428,7 +433,7 @@
    "source": [
     "### Барбикор\n",
     "\n",
-    "**(0.75 балла)** С помощью `python` превратите строчку в строчку написанную лесенкой. Например для строки \"Привет, Барби!\" выведите \"ПрИвЕт, БаРбИ!\":"
+    "**(0.75 балла)** С помощью `Python` превратите заданную строку в строку, написанную лесенкой (заглавные и строчные буквы должны чередоваться). Например, для строки \"Привет, Барби!\" выведите \"ПрИвЕт, БаРбИ!\":"
    ]
   },
   {
@@ -448,7 +453,7 @@
    "id": "28a89595",
    "metadata": {},
    "source": [
-    "**(0.5 балла)** Напишите функцию, которая принимает на вход строку и возвращает ее написанную лЕсЕнКоЙ, например для строки \"Привет, Барби!\" функция должна вернуть \"ПрИвЕт, БаРбИ!\"."
+    "**(0.5 балла)** Напишите функцию, которая принимает на вход строку и возвращает ее написанную лЕсЕнКоЙ. Например, для строки \"Привет, Барби!\" функция должна вернуть \"ПрИвЕт, БаРбИ!\"."
    ]
   },
   {
@@ -468,7 +473,7 @@
    "source": [
     "### Вычисляем размер частиц\n",
     "\n",
-    "**(1 балл)** Студент геофака пытается обработать данные для своей курсовой работы. Ему дали данные файла эксперимента, но вот незадача &ndash; вместо удобной таблички экспериментаторы вписали размер частиц снега в название файла. Оно выглядит так:\n",
+    "**(1 балл)** Студент геофака пытается обработать данные для своей курсовой работы. Ему дали данные файла эксперимента, но вот незадача — вместо удобной таблички экспериментаторы вписали размер частиц снега в название файла. Оно выглядит так:\n",
     "`EXPERIM_(две цифры с номером)_(размер частиц)mm.txt`\n",
     "\n",
     "Сделайте новый список, в котором будут размеры частиц для каждого файла (тип должен быть `int`):"
@@ -476,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "5e8aee82-cf93-4eb8-9d10-7a1b71da017c",
    "metadata": {},
    "outputs": [],
@@ -510,7 +515,7 @@
    "id": "476e4eef-02f6-44f6-82d0-d431e62b3579",
    "metadata": {},
    "source": [
-    "✨ **(1 балл)** А что если создатели были не так заботливы и в номере эксперимента количество символов не было фиксировано? "
+    "✨ **(1 балл)** А что если создатели не были бы так заботливы и в номере эксперимента количество символов не было фиксировано?"
    ]
   },
   {
@@ -551,7 +556,7 @@
    "source": [
     "### Он дивен, палиндром! И ни морд, ни лап не видно… (задача из экзамена)\n",
     "\n",
-    "**(1 балл)** Проверьте, являются ли палиндромами слова из списка (не учитывайте регистр при проверке). Сделайте новый список в котором будут только палиндромы и выведите его:"
+    "**(1 балл)** Проверьте, являются ли палиндромами слова из списка (не учитывайте регистр при проверке). Сделайте новый список, в котором будут только палиндромы, и выведите его:"
    ]
   },
   {
@@ -571,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "62df924b",
    "metadata": {},
    "outputs": [],
@@ -586,7 +591,7 @@
    "id": "2bb59508",
    "metadata": {},
    "source": [
-    "**(0.5 баллов)** Сделайте функцию `palindrom`, которая будет принимать такой список на вход и возвращать на выход список палиндромов"
+    "**(0.5 баллов)** Сделайте функцию `palindrom()`, которая будет принимать такой список на вход и возвращать на выход список палиндромов"
    ]
   },
   {
@@ -637,7 +642,7 @@
    "id": "73226dc9-e5ea-4866-8cf3-c38157ddfe9b",
    "metadata": {},
    "source": [
-    "**(1.25 балла)** Элементами списка может быть что угодно, даже другой список! В списке ниже каждый список это под-директория (проще говоря папка внутри папки!). Попробуйте найти `.txt` файлы в таком списке:"
+    "**(1.25 балла)** Элементами списка может быть что угодно, даже другой список! В списке ниже каждый список это поддиректория (проще говоря папка внутри папки!). Попробуйте найти `.txt` файлы в таком списке:"
    ]
   },
   {
@@ -662,7 +667,7 @@
    "source": [
     "### Спотифай (задача из экзамена)\n",
     "\n",
-    "**(1.5 балла)**  Дана строка в которой приведены разные треки разных исполнителей. Название исполнителя и трека разделено символом `|`, а разные треки разделены с помощью `,`. В строке есть как минимум один трек. Во второй строке вводится поисковой запрос. Выведите в качестве ответа количество треков, где поисковый запрос встречается или в названии трека или в имени исполнителя. Ищите вне зависимости от регистра, то есть: `tHiS` и `this` должны считаться одним словом."
+    "**(1.5 балла)**  Дана строка, в которой приведены разные треки разных исполнителей. Название исполнителя и трека разделено символом `|`, а разные треки разделены с помощью `,`. В строке есть как минимум один трек. Во второй строке вводится поисковой запрос. Выведите в качестве ответа количество треков, где поисковый запрос встречается или в названии трека или в имени исполнителя. Ищите вне зависимости от регистра, то есть: `tHiS` и `this` должны считаться одним словом."
    ]
   },
   {
@@ -698,11 +703,11 @@
    "id": "bbba430e",
    "metadata": {},
    "source": [
-    "✨ **(1.5 балла)** Выведите исполнителей и треки в которых встречается нужный нам поисковой запрос. Сначала выведите исполнителей в виде:\n",
+    "✨ **(1.5 балла)** Выведите исполнителей и треки, в которых встречается нужный нам поисковой запрос. Сначала выведите исполнителей в виде:\n",
     "\n",
-    "`Исполнители в которых встречается *search*: *список исполнителей через запятую*`\n",
+    "`Исполнители, в которых встречается *search*: *список исполнителей через запятую*`\n",
     "\n",
-    "`Треки в которых встречается *search*: *список треков через запятую*`"
+    "`Треки, в которых встречается *search*: *список треков через запятую*`"
    ]
   },
   {
@@ -722,7 +727,7 @@
    "source": [
     "### ✨ Пошёл на фиг со своей физической географией\n",
     "\n",
-    "**(1.5 балла)** Климат любой планеты во многом определяется зависимостью [температуры от высоты](https://ru.wikipedia.org/wiki/%D0%90%D1%82%D0%BC%D0%BE%D1%81%D1%84%D0%B5%D1%80%D0%B0_%D0%97%D0%B5%D0%BC%D0%BB%D0%B8). Один из показателей, который влияет на циркуляцию атмосферы это температурный градиент. Не углублясь в теорию, если температура падает с высотой быстрее опредленного значения, то она становится турбулентной, а если медленнее &ndash; то наоборот, все турбулентности подавляются. Это значение называется *[адиабатическим градиентом](https://ru.wikipedia.org/wiki/%D0%90%D0%B4%D0%B8%D0%B0%D0%B1%D0%B0%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9_%D0%B3%D1%80%D0%B0%D0%B4%D0%B8%D0%B5%D0%BD%D1%82_%D1%82%D0%B5%D0%BC%D0%BF%D0%B5%D1%80%D0%B0%D1%82%D1%83%D1%80%D1%8B)* и равно для Земли 9.8°. Посчитайте градиент температуры для вот этого температурного профиля и запишите его в новый список.\n",
+    "**(1.5 балла)** Климат любой планеты во многом определяется зависимостью [температуры от высоты](https://ru.wikipedia.org/wiki/%D0%90%D1%82%D0%BC%D0%BE%D1%81%D1%84%D0%B5%D1%80%D0%B0_%D0%97%D0%B5%D0%BC%D0%BB%D0%B8). Один из показателей, который влияет на циркуляцию атмосферы, — температурный градиент. Не углублясь в теорию, если температура падает с высотой быстрее опредленного значения, то она становится турбулентной, а если медленнее — то наоборот, все турбулентности подавляются. Это значение называется *[адиабатическим градиентом](https://ru.wikipedia.org/wiki/%D0%90%D0%B4%D0%B8%D0%B0%D0%B1%D0%B0%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B8%D0%B9_%D0%B3%D1%80%D0%B0%D0%B4%D0%B8%D0%B5%D0%BD%D1%82_%D1%82%D0%B5%D0%BC%D0%BF%D0%B5%D1%80%D0%B0%D1%82%D1%83%D1%80%D1%8B)* и равно для Земли 9.8°. Посчитайте градиент температуры для заданного температурного профиля и запишите его в новый список.\n",
     "\n",
     "Формула температурного градиента выглядит так:\n",
     "$$\n",
@@ -754,7 +759,7 @@
     "<details>\n",
     "<summary> <u> Подсказка как это написать: </u> </summary>\n",
     "\n",
-    "``` python\n",
+    "``` Python\n",
     "(temp[i+1]-temp[i])/(height[i+1] - height[i])\n",
     "```\n",
     "</details>\n",
@@ -763,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "21d5695c-6ab4-4328-95ac-acb41e168e50",
    "metadata": {},
    "outputs": [],
@@ -791,6 +796,26 @@
    "source": [
     "# Ваш код "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d19786a",
+   "metadata": {},
+   "source": [
+    "### Олбанец-попаданец\n",
+    "\n",
+    "Задолго до вашего рождения в нижнем рунете был распространен [олбанский язык](https://ru.wikipedia.org/wiki/%D0%96%D0%B0%D1%80%D0%B3%D0%BE%D0%BD_%D0%BF%D0%B0%D0%B4%D0%BE%D0%BD%D0%BA%D0%BE%D0%B2). Вы оказались в прошлом и решили попробовать себя в роли полевого лингвиста. У вас в распоряжении оказался список самых выдающихся слов из лексикона олбанцев. Создайте новый список, в котором эти слова будут отсортированы в алфавитном порядке. Создайте другой список, в котором будет реализована обратная сортировка."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20c077e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_alban_words = ['аффтар', 'курса', 'убейся', 'апстену']"
+   ]
   }
  ],
  "metadata": {
@@ -809,7 +834,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
