fix: most important language errors

--- a/Lectures/Lecture4/Lecture4.ipynb
+++ b/Lectures/Lecture4/Lecture4.ipynb
@@ -33,7 +33,7 @@
     "y = 4\\frac{(-1)^n}{2n+1}\n",
     "$$\n",
     "\n",
-    "Сложите все `y` для `n` равных от нуля* до `10000`. Что за число получилось? "
+    "Сложите все `y` для `n`, равных от нуля* до `10000`. Что за число получилось? "
    ]
   },
   {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "909b9f4a",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
    "source": [
     "<p>\n",
     "<details>\n",
-    "<summary> <u> Проверяем является одно число делителем другого </u> </summary>\n",
+    "<summary> <u> Проверяем, является ли одно число делителем другого </u> </summary>\n",
     "\n",
     "\n",
     "``` python\n",
@@ -144,7 +144,7 @@
     "\n",
     "<p>\n",
     "<details>\n",
-    "<summary> <u> Пишем цикл от единицы (?) до числа (?) и проверяем находим все делители этого числа </u> </summary>\n",
+    "<summary> <u> Пишем цикл от единицы (?) до числа (?) и находим все делители этого числа </u> </summary>\n",
     "\n",
     "\n",
     "``` python\n",
@@ -233,20 +233,20 @@
    "source": [
     "## **Более крутой способ форматировать строки**\n",
     "\n",
-    "Вам не казалось что складывание строк через:\n",
+    "Вам не казалось, что складывание строк через\n",
     "``` python\n",
     "'Сегодня ' + str(degrees) + ' градусов по Цельсию' \n",
     "```\n",
-    "немного громоздким? Это правда, и можно делать это более элегантно сразу тремя разными способами.\n",
+    "выглядит немного громоздким? Это правда, и можно форматировать строки более элегантно сразу тремя разными способами.\n",
     "\n",
     "### `f`-строки\n",
     "\n",
-    "Добавив к строке до её начала `f` можно вставлять туда числовые значения:"
+    "Если добавить к строке до её начала `f`, то в неё можно вставлять числовые значения:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "id": "8f4d5e51-bf5a-4966-8eae-b73c555cb93f",
    "metadata": {},
    "outputs": [
@@ -254,13 +254,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Сегодня в Москве 24.2 градуса по Цельсию 1\n"
+      "Сегодня в Москве 24.2 градуса по Цельсию\n"
      ]
     }
    ],
    "source": [
     "degrees = 24.2\n",
-    "message = f'Сегодня в Москве {degrees} градуса по Цельсию {}' \n",
+    "message = f'Сегодня в Москве {degrees} градуса по Цельсию'\n",
     "\n",
     "print(message)"
    ]
@@ -274,7 +274,7 @@
     "<details>\n",
     "<summary> ☝ ✨ <u> f-строки можно использовать для нахождения багов </u> </summary>\n",
     "\n",
-    "Можно выводить сразу с выражением `=` в процессе, и наиболее всего такая форма удобна для нахождения багов в коде, так как позволяет подсвечивать сразу названия переменных:\n",
+    "Можно выводить строку сразу с выражением `=` в процессе, и наиболее всего такая форма удобна для нахождения багов в коде, так как позволяет подсвечивать сразу названия переменных:\n",
     "\n",
     "``` python\n",
     "name = 'SCP-173'\n",
@@ -320,7 +320,7 @@
    "id": "f8a1b33c-c073-4511-92a3-b7829351cb0f",
    "metadata": {},
    "source": [
-    "Большой разницы в этих способах нету, можно спокойно использовать и то и то."
+    "Большой разницы в этих способах нету, можно спокойно использовать оба."
    ]
   },
   {
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "id": "7d65c038-d276-4cf8-8165-9ebc845ca0cf",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
    "id": "36348142-c321-4f4a-bcad-f44c42e06ae8",
    "metadata": {},
    "source": [
-    "Но сейчас его почти не используют, чтобы не путать с оператором остатка от деления, да `f`-строки просто более читаемые."
+    "Но сейчас его почти не используют, чтобы не путать с оператором остатка от деления, да и `f`-строки просто более читаемые."
    ]
   },
   {
@@ -385,14 +385,14 @@
    "source": [
     "# **Работа с файлами в python**\n",
     "\n",
-    "До этого мы хранили всю информацию в строчках кода. В реальности, все данные всегда хранятся в файлах! Давайте разберем как их считывать и что с ним делать.\n",
+    "До этого мы хранили всю информацию в строчках кода. В реальности все данные всегда хранятся в файлах! Давайте разберем, как их считывать и что с ним делать.\n",
     "\n",
     "Простейший способ открытия текстового файла выглядит так: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "id": "37e1cdcc-3a31-41f5-9de4-eb39f3af8ff4",
    "metadata": {},
    "outputs": [
@@ -414,8 +414,7 @@
       "Krasnoyarsk 56.0089 92.8719\n",
       "Voronezh 51.6717 39.2106\n",
       "Perm 58.0139 56.2489\n",
-      "Volgograd 48.7086 44.5147\n",
-      "\n"
+      "Volgograd 48.7086 44.5147\n"
      ]
     }
    ],
@@ -432,12 +431,12 @@
    "id": "f2c7d6a0-9c01-4ce9-a57d-7042191742ae",
    "metadata": {},
    "source": [
-    "Каждый раз открывая файл мы создаем специальную переменную *файлового потока*. После использования файла, эту переменную нужно закрыть, иначе могут возникнуть [разные неприятные последствия](https://stackoverflow.com/questions/25070854/why-should-i-close-files-in-python). Часть люди забывают закрывать файл, да и выглядит это не очень читаемо, поэтому была придумана следующая схема:"
+    "Каждый раз, открывая файл, мы создаем специальную переменную *файлового потока*. После использования файла, эту переменную нужно закрыть, иначе могут возникнуть [разные неприятные последствия](https://stackoverflow.com/questions/25070854/why-should-i-close-files-in-python). Часть люди забывают закрывать файл, да и выглядит это не очень читаемо, поэтому была придумана следующая схема:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "id": "3b582e95-644c-45e3-a0d2-86a157ea90fe",
    "metadata": {},
    "outputs": [
@@ -459,8 +458,7 @@
       "Krasnoyarsk 56.0089 92.8719\n",
       "Voronezh 51.6717 39.2106\n",
       "Perm 58.0139 56.2489\n",
-      "Volgograd 48.7086 44.5147\n",
-      "\n"
+      "Volgograd 48.7086 44.5147\n"
      ]
     }
    ],
@@ -476,7 +474,7 @@
    "id": "ffee1319-eefb-45b9-bbc0-af9d32ff924b",
    "metadata": {},
    "source": [
-    "Она закрывает файл сразу же окончания отступа.\n",
+    "Она закрывает файл сразу же после окончания отступа.\n",
     "\n",
     "> ☝ Строго говоря, ключевое слово `with` используется и для [других целей](https://stackoverflow.com/questions/3012488/what-is-the-python-with-statement-designed-for), но в абсолютном большинстве случаев его используют именно для открытия/закрытия файлов."
    ]
@@ -489,12 +487,12 @@
     "Теперь посмотрим на разные методы для считывания файлов:\n",
     "- `.read()` считывает файл полностью в виде строки\n",
     "- `.readline()` считывает только одну строку и сохраняет положение курсора: если вызвать еще раз, то считает уже следующую строку\n",
-    "- `.readlines()` считывает все строки и записывает в массив: каждый элемент массива это новая строка "
+    "- `.readlines()` считывает все строки и записывает в массив: каждый элемент массива — это новая строка "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "id": "e9c87f31-af54-4e6b-a18d-ffc4c176199d",
    "metadata": {},
    "outputs": [
@@ -502,7 +500,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Moscow 55.7558 37.6178\\n', 'SaintPetersburg 59.9500 30.3167\\n', 'Novosibirsk 55.0333 82.9167\\n', 'Yekaterinburg 56.8356 60.6128\\n', 'NizhniyNovgorod 56.3269 44.0075\\n', 'Kazan 55.7964 49.1089\\n', 'Chelyabinsk 55.1500 61.4000\\n', 'Omsk 54.9667 73.3833\\n', 'Samara 53.2028 50.1408\\n', 'Rostov 47.2333 39.7000\\n', 'Ufa 54.7261 55.9475\\n', 'Krasnoyarsk 56.0089 92.8719\\n', 'Voronezh 51.6717 39.2106\\n', 'Perm 58.0139 56.2489\\n', 'Volgograd 48.7086 44.5147\\n']\n"
+      "['Moscow 55.7558 37.6178\\n', 'SaintPetersburg 59.9500 30.3167\\n', 'Novosibirsk 55.0333 82.9167\\n', 'Yekaterinburg 56.8356 60.6128\\n', 'NizhniyNovgorod 56.3269 44.0075\\n', 'Kazan 55.7964 49.1089\\n', 'Chelyabinsk 55.1500 61.4000\\n', 'Omsk 54.9667 73.3833\\n', 'Samara 53.2028 50.1408\\n', 'Rostov 47.2333 39.7000\\n', 'Ufa 54.7261 55.9475\\n', 'Krasnoyarsk 56.0089 92.8719\\n', 'Voronezh 51.6717 39.2106\\n', 'Perm 58.0139 56.2489\\n', 'Volgograd 48.7086 44.5147']\n"
      ]
     }
    ],
@@ -518,14 +516,14 @@
    "id": "71d80b27-b0f7-4500-93d1-a5a45a99ff6c",
    "metadata": {},
    "source": [
-    "> ☝ Символ `\\n` обозначает начало новой строки, а сам механизм разделения строк может работать немного по разному на разных системах\n",
+    "> ☝ Символ `\\n` обозначает начало новой строки, а сам механизм разделения строк может работать немного по-разному на разных системах\n",
     "\n",
     "При желании, мы можем сделать (почти) то же самое с помощью:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "id": "a986bc32-650d-4c64-bfb3-295d461d706b",
    "metadata": {},
    "outputs": [
@@ -557,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "id": "4e02a541-4d04-4227-9329-f396df914b15",
    "metadata": {},
    "outputs": [
@@ -565,20 +563,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Moscow 55.7558 37.6178\r\n",
-      "SaintPetersburg 59.9500 30.3167\r\n",
-      "Novosibirsk 55.0333 82.9167\r\n",
-      "Yekaterinburg 56.8356 60.6128\r\n",
-      "NizhniyNovgorod 56.3269 44.0075\r\n",
-      "Kazan 55.7964 49.1089\r\n",
-      "Chelyabinsk 55.1500 61.4000\r\n",
-      "Omsk 54.9667 73.3833\r\n",
-      "Samara 53.2028 50.1408\r\n",
-      "Rostov 47.2333 39.7000\r\n",
-      "Ufa 54.7261 55.9475\r\n",
-      "Krasnoyarsk 56.0089 92.8719\r\n",
-      "Voronezh 51.6717 39.2106\r\n",
-      "Perm 58.0139 56.2489\r\n",
+      "Moscow 55.7558 37.6178\n",
+      "SaintPetersburg 59.9500 30.3167\n",
+      "Novosibirsk 55.0333 82.9167\n",
+      "Yekaterinburg 56.8356 60.6128\n",
+      "NizhniyNovgorod 56.3269 44.0075\n",
+      "Kazan 55.7964 49.1089\n",
+      "Chelyabinsk 55.1500 61.4000\n",
+      "Omsk 54.9667 73.3833\n",
+      "Samara 53.2028 50.1408\n",
+      "Rostov 47.2333 39.7000\n",
+      "Ufa 54.7261 55.9475\n",
+      "Krasnoyarsk 56.0089 92.8719\n",
+      "Voronezh 51.6717 39.2106\n",
+      "Perm 58.0139 56.2489\n",
       "Volgograd 48.7086 44.5147"
      ]
     }
@@ -625,12 +623,12 @@
    "source": [
     "### Функция `input()`\n",
     "\n",
-    "Функция `input()` позволяет считать данные прямо с клавиатуры и записать их в переменную. Выполните следующую ячейку чтобы попробовать:"
+    "Функция `input()` позволяет считать данные прямо с клавиатуры и записать их в переменную. Выполните следующую ячейку, чтобы попробовать:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 11,
    "id": "da1588a2",
    "metadata": {
     "scrolled": false
@@ -640,8 +638,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "бла бла бла\n",
-      "Мы ввели бла бла бла\n"
+      "Мы ввели тест\n"
      ]
     }
    ],
@@ -667,14 +664,14 @@
     "\n",
     "### Котик ватру4шка 12вареник?\n",
     "\n",
-    "- Считываются строки через пробел до тех пор пока не введен `0`\n",
+    "- Считываются строки через пробел до тех пор, пока не введен `0`\n",
     "- Для каждой вводимой строки сделать проверку: если она состоит только из букв и ее длина менее 7 символов, то ее нужно добавить в список\n",
     "- Напечатать получишийся список"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 14,
    "id": "23778afb",
    "metadata": {},
    "outputs": [
@@ -682,7 +679,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "['котик', 'лук', 'вода', 'лупа']\n"
      ]
     }
    ],
@@ -702,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 15,
    "id": "4cbd5189",
    "metadata": {},
    "outputs": [
@@ -710,12 +707,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "котик\n",
-      "луковка\n",
-      "луковка1\n",
-      "12вареник\n",
-      "0\n",
-      "['котик']\n"
+      "[]\n"
      ]
     }
    ],
@@ -745,23 +737,15 @@
    "source": [
     "- На первой строке вводится слово\n",
     "- Затем вводится последовательность букв\n",
-    "- Программа должна проверить, что слово начинается с введенной последовательности и ее длина больше 5 символов, то напечтать \"подходит\""
+    "- Если слово начинается с введенной последовательности и его длина больше 5 символов, то печатается строка \"подходит\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 16,
    "id": "98773608",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Подходит\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input1 = 'лисичка'\n",
     "input2 = 'ли1'\n",
@@ -788,7 +772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
